// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package net.bzzt;

option go_package = "net/bzzt";
option java_outer_classname = "MyEntity";

message SetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}

message GetValueCommand {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
}

message MyResult {
    int32 value = 1;
}

message PullRequest {
    string state = 1;
}

message PullRequestData {
    string number = 1 [(akkaserverless.field).entity_key = true];
    string action = 2;
    PullRequest pull_request = 3;
}

service MyServiceEntity {
    rpc WebHook(PullRequestData) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          post: "/webhook"
          body: "*"
        };
    }

    option (akkaserverless.service).entity.type = ".persistence.MyEntity";
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty);
    rpc GetValue(GetValueCommand) returns (MyResult);
}
