syntax = "proto3";

option go_package = "net/bzzt/persistence;persistence";
package net.bzzt.persistence;

import "akkaserverless/annotations.proto";

option (akkaserverless.file).event_sourced_entity = {
    name: "MyEntity"
    entity_type: "MyEntity"
    state: { type: "MyState" }
    event: { type: "ValueSet" }
};

message MyState {
    int32 value = 1;
}

message ValueSet {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
}